--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -156,6 +156,7 @@ Learner collaborative
 <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
 <script type="text/javascript">
   mockup = '{{ image_key }}';
+  collabType = '{{ collab_type }}';
   PWAP.rects = {};
   PWAP.state = [];
   jQuery(function() {
