--- a/pwap/templates/create_task.html
+++ b/pwap/templates/create_task.html
@@ -9,13 +9,13 @@
         <div class="row">
           <div class="col-lg-5">
             <h3>Register</h3>
-            <form action="/add/task" method="post">
+            <form action="/add/newtask" method="post">
               {{ new.hidden_tag()}}
               {{ render_field(new.image_path) }}
               {{ render_field(new.state) }}
               {{ render_field(new.rects) }}
-              {{ render_field(new.class_type) }}
-              <!--{{ render_radio_field(register.scope) }}-->
+              {{ render_field(new.css_class) }}
+              {{ render_field(new.html) }}
               <input class="btn btn-primary btn-block" type="submit" name="btn" value="Create new task">
             </form>
           </div>
